crates/murphy-plugin-macros/tests/ui/fail_node_pattern_quantifier_capture_in_body.stderr
error: node_pattern!: pattern parse error: a node match needs a head: a node type, `_`, or `{...}` (at 8..9)
 --> tests/ui/fail_node_pattern_quantifier_capture_in_body.rs:5:40
  |
5 | murphy_plugin_macros::node_pattern!(m, "(array ($int)+)");
  |                                        ^^^^^^^^^^^^^^^^^
